# legal-team-mcp

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
src/: legal_team_server.py
